--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,14 @@ cmake-build-debug/CMakeFiles/3.15.3/CompilerIdC/a.out
 cmake-build-debug/CMakeFiles/3.15.3/CompilerIdC/CMakeCCompilerId.c
 cmake-build-debug/CMakeFiles/3.15.3/CompilerIdCXX/a.out
 cmake-build-debug/CMakeFiles/3.15.3/CompilerIdCXX/CMakeCXXCompilerId.cpp
+/cmake-build-debug/CMakeFiles/3.16.5/CompilerIdC/a.out
+/cmake-build-debug/CMakeFiles/3.16.5/CompilerIdC/CMakeCCompilerId.c
+/cmake-build-debug/CMakeFiles/3.16.5/CompilerIdCXX/a.out
+/cmake-build-debug/CMakeFiles/3.16.5/CompilerIdCXX/CMakeCXXCompilerId.cpp
+/cmake-build-debug/CMakeFiles/3.16.5/CMakeCCompiler.cmake
+/cmake-build-debug/CMakeFiles/3.16.5/CMakeCXXCompiler.cmake
+/cmake-build-debug/CMakeFiles/3.16.5/CMakeDetermineCompilerABI_C.bin
+/cmake-build-debug/CMakeFiles/3.16.5/CMakeDetermineCompilerABI_CXX.bin
+/cmake-build-debug/CMakeFiles/3.16.5/CMakeSystem.cmake
+/cmake-build-debug/CMakeFiles/DataGenerator.dir/CorpusGenerator/SentenceDisambiguationCorpusGenerator.cpp.o
+/cmake-build-debug/CMakeFiles/DataGenerator.dir/CorpusGenerator/TreeDisambiguationCorpusGenerator.cpp.o
