Added more files to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,80 @@ cmake-build-debug/CMakeFiles/3.15.3/CompilerIdCXX/CMakeCXXCompilerId.cpp
 /cmake-build-debug/CMakeFiles/3.16.5/CMakeSystem.cmake
 /cmake-build-debug/CMakeFiles/DataGenerator.dir/CorpusGenerator/SentenceDisambiguationCorpusGenerator.cpp.o
 /cmake-build-debug/CMakeFiles/DataGenerator.dir/CorpusGenerator/TreeDisambiguationCorpusGenerator.cpp.o
+.idea/DataGenerator.iml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+cmake-build-debug/cmake_install.cmake
+cmake-build-debug/CMakeCache.txt
+cmake-build-debug/DataGenerator.cbp
+cmake-build-debug/libDataGenerator.a
+cmake-build-debug/Makefile
+cmake-build-debug/CMakeFiles/clion-environment.txt
+cmake-build-debug/CMakeFiles/clion-log.txt
+cmake-build-debug/CMakeFiles/cmake.check_cache
+cmake-build-debug/CMakeFiles/CMakeDirectoryInformation.cmake
+cmake-build-debug/CMakeFiles/CMakeOutput.log
+cmake-build-debug/CMakeFiles/Makefile.cmake
+cmake-build-debug/CMakeFiles/Makefile2
+cmake-build-debug/CMakeFiles/progress.marks
+cmake-build-debug/CMakeFiles/TargetDirectories.txt
+cmake-build-debug/CMakeFiles/3.17.3/CMakeCCompiler.cmake
+cmake-build-debug/CMakeFiles/3.17.3/CMakeCXXCompiler.cmake
+cmake-build-debug/CMakeFiles/3.17.3/CMakeDetermineCompilerABI_C.bin
+cmake-build-debug/CMakeFiles/3.17.3/CMakeDetermineCompilerABI_CXX.bin
+cmake-build-debug/CMakeFiles/3.17.3/CMakeSystem.cmake
+cmake-build-debug/CMakeFiles/3.17.3/CompilerIdC/a.out
+cmake-build-debug/CMakeFiles/3.17.3/CompilerIdC/CMakeCCompilerId.c
+cmake-build-debug/CMakeFiles/3.17.3/CompilerIdCXX/a.out
+cmake-build-debug/CMakeFiles/3.17.3/CompilerIdCXX/CMakeCXXCompilerId.cpp
+cmake-build-debug/CMakeFiles/DataGenerator.dir/build.make
+cmake-build-debug/CMakeFiles/DataGenerator.dir/cmake_clean.cmake
+cmake-build-debug/CMakeFiles/DataGenerator.dir/cmake_clean_target.cmake
+cmake-build-debug/CMakeFiles/DataGenerator.dir/CXX.includecache
+cmake-build-debug/CMakeFiles/DataGenerator.dir/depend.internal
+cmake-build-debug/CMakeFiles/DataGenerator.dir/depend.make
+cmake-build-debug/CMakeFiles/DataGenerator.dir/DependInfo.cmake
+cmake-build-debug/CMakeFiles/DataGenerator.dir/flags.make
+cmake-build-debug/CMakeFiles/DataGenerator.dir/link.txt
+cmake-build-debug/CMakeFiles/DataGenerator.dir/progress.make
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/CaseAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/IsAdjectiveAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/IsAuxiliaryVerbAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/IsCapitalAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/IsDateAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/IsFractionAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/IsHonorificAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/IsLocationGazetteer.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/IsMoneyAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/IsNumberAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/IsOrganizationAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/IsOrganizationGazetteer.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/IsPersonGazetteer.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/IsProperNounAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/IsRealAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/IsTimeAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/LastIGContainsPossessiveAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/LastIGContainsTagAblativeAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/LastIGContainsTagAccusativeAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/LastIGContainsTagAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/LastIGContainsTagGenitiveAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/LastIGContainsTagInstrumentalAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/MainPosAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/Predicate.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/RootFormAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/RootPosAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/SurfaceFormAttribute.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/CorpusGenerator/NERCorpusGenerator.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/DataSetGenerator/AnnotatedDataSetGenerator.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/DataSetGenerator/DataSetGenerator.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/DataSetGenerator/DisambiguationDataSetGenerator.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/DataSetGenerator/NerDataSetGenerator.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/DataSetGenerator/RootWordDataSetGenerator.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/DataSetGenerator/SemanticDataSetGenerator.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/InstanceGenerator/DisambiguationInstanceGenerator.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/InstanceGenerator/NerInstanceGenerator.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/InstanceGenerator/RootWordInstanceGenerator.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/InstanceGenerator/SemanticInstanceGenerator.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/InstanceGenerator/ShallowParseInstanceGenerator.cpp.o
+cmake-build-debug/CMakeFiles/DataGenerator.dir/InstanceGenerator/SimpleWindowInstanceGenerator.cpp.o
