--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,15 @@ cmake-build-debug/CMakeFiles/DataGenerator.dir/InstanceGenerator/SimpleWindowIns
 /cmake-build-debug/CMakeFiles/Progress/
 /cmake-build-debug/CMakeFiles/DataGenerator.dir/InstanceGenerator/
 /cmake-build-debug/Test
+/cmake-build-debug/CMakeFiles/DataGenerator.dir/Attribute/
+/cmake-build-debug/CMakeFiles/DataGenerator.dir/CorpusGenerator/
+/cmake-build-debug/CMakeFiles/DataGenerator.dir/DataSetGenerator/
+/cmake-build-debug/CMakeFiles/DataGenerator.dir/compiler_depend.make
+/cmake-build-debug/CMakeFiles/DataGenerator.dir/compiler_depend.ts
+/cmake-build-debug/.cmake/api/v1/reply/cache-v2-1f905378a4cb807178fc.json
+/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-1b5ee38e0680e9b703f7.json
+/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-7f514ba150c761267683.json
+/cmake-build-debug/.cmake/api/v1/reply/index-2022-05-25T08-49-44-0776.json
+/cmake-build-debug/.cmake/api/v1/reply/target-DataGenerator-Debug-7f003ca765192a63b0ef.json
+/cmake-build-debug/.cmake/api/v1/reply/target-Test-Debug-6c065be3ac4b863d4fb5.json
+/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-e9a717f4bcd82da380fe.json
