Updated treebank construction from folder.

--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,10 @@ cmake-build-debug/CMakeFiles/DataGenerator.dir/InstanceGenerator/SimpleWindowIns
 /cmake-build-debug/.cmake/api/v1/reply/target-DataGenerator-Debug-7f003ca765192a63b0ef.json
 /cmake-build-debug/.cmake/api/v1/reply/target-Test-Debug-6c065be3ac4b863d4fb5.json
 /cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-e9a717f4bcd82da380fe.json
+/cmake-build-debug/.cmake/api/v1/reply/cache-v2-685f6432a6860f5a976a.json
+/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-bae72b7b16f0c772a365.json
+/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-a197c03e9acf00518aa6.json
+/cmake-build-debug/.cmake/api/v1/reply/index-2022-07-31T04-41-45-0225.json
+/cmake-build-debug/.cmake/api/v1/reply/target-DataGenerator-Debug-d2d3228f5ebe027178ff.json
+/cmake-build-debug/.cmake/api/v1/reply/target-Test-Debug-f5f6d071b91113713196.json
+/cmake-build-debug/CMakeFiles/DataGenerator.dir/compiler_depend.internal
